# crabgrass

./: .env.example  .gitignore  AI_README.md  README.md  main.py  pyproject.toml  tasks.md
backend/: pyproject.toml
backend/src/crabgrass/: config.py  main.py
backend/src/crabgrass/agents/: __init__.py  idea_assistant.py  objective_assistant.py  objective_tools.py  prompts.py  runner.py  state.py  tools.py
backend/src/crabgrass/agents/background/: __init__.py  connection.py  nurture.py  objective.py  surfacing.py
backend/src/crabgrass/api/: __init__.py  agent.py  agui.py  graph.py  ideas.py  notifications.py  objectives.py  schemas.py  users.py
backend/src/crabgrass/concepts/: __init__.py  approach.py  challenge.py  coherent_action.py  idea.py  idea_objective.py  notification.py  objective.py  queue.py  session.py  summary.py  user.py  watch.py
backend/src/crabgrass/database/: __init__.py  connection.py  schema.py
backend/src/crabgrass/scripts/: __init__.py  seed.py
backend/src/crabgrass/services/: __init__.py  embedding.py  graph.py  graph_batch.py  similarity.py
backend/src/crabgrass/syncs/: __init__.py  registry.py  signals.py
backend/src/crabgrass/syncs/handlers/: __init__.py  embedding.py  enqueue.py  graph.py  logging.py  similarity.py
backend/tests/: conftest.py  test_background_agents.py  test_graph.py  test_handlers.py  test_integration.py  test_registry.py  test_wiring.py
backend/tests/test_api/: __init__.py  conftest.py  test_agent.py  test_components.py  test_ideas.py  test_notifications.py  test_objectives.py
context/: conventions.md  (+2 more)
(+38 files in other folders)
